[workspace]
members = [
    "c7_modules",
    "c8_collections",
    "c9_error",
    "c10_generic",
    "c11_test",
    "c12_minigrep",
    "c13_iterators_closures",
    "c14_cargo_crates",
    "c15_smart_pointers",
    "enumerate",
    "functions",
    "guessing",
    "hello",
    "hey",
    "hi",
    "string",
    "structure"
]



[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3