[package]
name = "hello_rust_moka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moka = { version = "0.12.5", features = ["sync"] }
mini-moka = { git = "https://github.com/moka-rs/mini-moka.git", branch = "main" }

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev.package."*"]
opt-level = 0