[package]
name = "hello"
version = "0.1.0"
authors = ["fred <wangxingfred@gmail.com>"]
edition = "2018"
description = "A hello program in rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
rand = "0.5.5"
hi = { path = "../hi" }